/*
 * $Id: ChangeLog,v 1.517 2008-06-02 05:35:30 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-06-02 00:34 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_windows.c
    + ShowWindowNA() function added.
  * source/h_scroll.prg
    * Do not force window activation when scrollbar changes.
  * source/h_windows.prg
    - ::SetFocusedSplitChild() method integrated to
      ::SetActivationFocus().
    * If ::Focused is .F., do not force set focus to window
      when it's shown.
    * Animation added to TForm:Show(), TForm:Hide(), TForm:Visible().

2008-05-18 09:34 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_combo.prg
    + ::ShowDropDown() method added.

2008-04-28 8:30 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_error.prg
    * change version

2008-04-27 18:15 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_radiogroup.ch
  * source/h_radio.prg
    ! Fixed SPACING for horizontal radio.
    ! Fixed TABSTOP implementation.
    + DISABLED, RTL, HEIGHT, SUBCLASS clauses added.
  * source/h_controlmisc.prg
    ! Fixed visible items inside TABs.
  * source/h_windows.prg
    + TWindow:ContainerEnabled property added.

2008-04-26 18:33 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_menu.ch
    + DEFINE MENU DYNAMIC added.

2008-04-13 13:49 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_image.prg
    * Removed SS_NOTIFY style from default.

2008-04-04 23:39 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_tab.prg
    ! Added ON CHANGE processing when tab page is changed via
      ::Value property.

2008-03-29 23:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_controlmisc.c
    ! Fixed transparent color for grid.

2008-03-23 16:10 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_richeditbox.prg