@@ -1,11 +1,16 @@
 /*
- * $Id: ChangeLog,v 1.517 2008-06-02 05:35:30 guerra000 Exp $
+ * $Id: ChangeLog,v 1.518 2008-06-02 12:20:48 declan2005 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-06-02 7:19 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
+  * source/c_monthcalendar.c
+    + added GETMONTHCALFIRSTDAYOFWEEK  and SETMONTHCALFIRSTDAYOFWEEK  funtcions.
+
 
 2008-06-02 00:34 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/c_windows.c
